[project]
name = "food"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "cho6019", email = "j01040864205@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
